--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Online Food DeliveryServices in India | MyOnlineMeals.com</title>
-    <link rel="stylesheet" href="D:\HTML\index.html\Food Delivery Website/style.css"> 
+    <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" media="screen and (max-width: 1170px)"href="D:\HTML\index.html\Food Delivery Website/phone.css">   
 </head>
 <body>
