--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h1 class="h-primary center" >Our Clients</h1>
         <div id="clients">
             <div class="client-items">
-                <img src="D:\img/logo1.png" alt="Our Clients">
+                <img src="logo1.png" alt="Our Clients">
             </div>
             <div class="client-items">
                 <img src="D:\img/logo2.png" alt="Our Clients">
